[notif] fix alignment (#3734)

--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -101,6 +101,7 @@ kbd {
 // dropdowns
 .dropdown-menu > li > a {
 	padding: 14px;
+	white-space: normal;
 }
 
 .dropdown-menu {
